--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "qalqa stylesheet",
-  "version": "0.0.1",
+  "name": "qalqa-stylesheet",
+  "version": "0.1.0",
   "dependencies": {
     "primeflex": "^3.3.1"
   }
