--- a/publish/package.json
+++ b/publish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qalqa-stylesheet",
-  "version": "0.1.7",
+  "version": "1.0.0",
   "description": "small stylesheet for my projects, i hate css :/",
   "author": "qalqa",
   "repository": {
@@ -13,10 +13,6 @@
     "utility"
   ],
   "license": "MIT",
-  "main": "main.css",
-  "style": "main.css",
-  "dependencies": {
-    "normalize.css": "^8.0.1",
-    "primeflex": "^3.3.1"
-  }
+  "main": "main.min.css",
+  "style": "main.min.css"
 }
